--- a/style.css
+++ b/style.css
@@ -2,12 +2,14 @@ body {
     margin: 0;
     padding: 0;
     font-family: 'Smythe', sans-serif;
+    background-color: lightgray;
 }
 
 .container {
     width: 600px;
     margin: 0 auto;
     padding-bottom: 50px;
+    background-color: white;
 }
 
 .header {
